css/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html,
body {
  font-family: Helvetica Neue, sans-serif;
}

body {
  height: 100vh;
  background-image: linear-gradient(155deg, #e6b3e5, #ffac8d);
}

@media screen and (max-width: 500px) {
  body {
    height: auto;
    min-height: 100vh;
    background: none;
  }
}

@keyframes fadein {
  from { 
    opacity: 0;
    transform: translate3d(0, 10px, 0);
  }
  
  to   { 
    opacity: 1;
    transform: translate3d(0, 0, 0);
  }
}

.wrapper {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  width: 400px;
  height: 620px;
  background-color: #fff;
  box-shadow: 0 20px 80px rgba(0, 0, 0, 0.6);
  animation: fadein 1s;
}

@media screen and (max-width: 500px) {
  .wrapper {
    width: 100%;
    height: 100vh;
    margin: 0;
    box-shadow: none;
    animation: none;
  }
}

  .wrapper__inner {
    position: relative;
    width: 100%;
    height: 100%;
  }

@media screen and (max-width: 500px) {
  .notepad {
    padding: 15px;
  }
}

  .notepad__heading {
    width: 100%;
    padding: 60px 40px 15px;
    border-bottom: 1px solid #f5f4f4;
    color: #5f5f5f;
    font-weight: 400;
  }

  .notepad__form-input {
    border: 0;
    width: 100%;
    line-height: 1.3;
    margin: 0;
    font-size: 19px;
    color: #5f5f5f;
    padding: 30px 40px;
    background-color: transparent;
    transition: background-color 300ms ease;

    @media screen and (max-width: 500px) { 
      .notepad__form-input {
        height: auto;
      }
    }
  }

  .notepad__form-input:focus {
    outline: 0;
    background-color: #f5f5f5;
  }

  .notepad__list-item {
    list-style-type: none;
    border: 0;
    width: 100%;
    line-height: 1.3;
    font-size: 19px;
    color: #5f5f5f;
    padding: 30px 40px;
    background-color: transparent;
    cursor: pointer;
    transition: 
      color 300ms ease,
      background-color 300ms ease;
  }

  .notepad__list-item:hover {
    color: #fff;
    background-color: #FF6C6C;
  }
  
  .console {
    position: absolute;
    top: 50px;
    right: 50px;
    width: 300px;
    min-height: 170px;
    font-size: 13px;
    display: none;
  }

  .console__serviceworker,
  .console__localstorage {
    padding: 17px;
    margin-bottom: 20px;
    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.4);
    background-color: #fff;
  }

  .console span {
    font-family: monospace;
    display: block;
    font-style: italic;
    margin: 7px 0 0;
  }

